# jaeger-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
actual/: index.html
actual/static/: index-D-gzS2WF.css
src/: handlers.rs  main.rs  static_files.rs
