[package]
name = "jaeger-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
log = "0.4.27"
opentelemetry-proto = { version = "0.6.0", features = [
    "gen-tonic",
    "gen-tonic-messages",
    "tonic",
    "trace",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tonic = { version = "0.11.0", features = ["gzip", "zstd"] }
prost = "0.12"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }
http = "0.2.12"
prost-types = "0.13.5"
hex = "0.4.3"
serde_with = "3.12.0"
clap = { version = "4.5.39", default-features = false, features = ["usage", "suggestions", "std", "error-context", "derive"] }
simple_logger = "5.0.0"

[build-dependencies]
tonic-build = "0.11"
